--- a/style.css
+++ b/style.css
@@ -10,6 +10,12 @@
 {
   padding:10px;
 }
+#aaa{
+  height: 600px;
+  width: 100%;
+  background-color: burlywood;
+  display: none;
+}
 * {  
   margin: 0;  
   padding: 0;  
