--- a/style.css
+++ b/style.css
@@ -1,10 +1,29 @@
-
-#panel,#flip
+body{
+  background-image: url(back.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: #fbb3c4;
+  background-size: cover;
+}
+#flip
 {
 	padding:5px;
 	text-align:center;
-	background-color:#e5eecc;
-	border:solid 1px #c3c3c3;
+  /* background-color:#e5eecc; */
+  display: flex;
+  justify-content: space-evenly;
+  flex-direction: column;
+  align-items: center;
+}
+.logo{
+  width: 250px;
+  height: 100px;
+  background-color: coral;
+}
+.someting{
+  width: 250px;
+  height: 100px;
+  background-color:sandybrown;
 }
 #panel
 {
@@ -26,9 +45,11 @@ img {
 }  
 
 .goods {  
-  width: 50%;  
+  width: 94%;  
   text-align: center;  
-  margin: 50px auto;  
+  margin: 0px auto;  
+  position: fixed;
+  bottom: 0px;
 }  
 
 .goods img {  
