--- a/style.css
+++ b/style.css
@@ -1,8 +1,18 @@
-body{
-  background-image: url(back2.png);
-  background-repeat: no-repeat;
-  background-position: bottom;
-  background-attachment: fixed;
+
+body:before {
+  content: "";
+  display: block;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -10;
+  background: url(back2.png) no-repeat center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 #flip{
   background-image: url(back.png);
